--- a/index.htm
+++ b/index.htm
@@ -3,71 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Форма регистрации</title>
+    <title>бургер?</title>
     <style>
         body {
-            font-family: sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
             margin: 0;
-            background-color: #f4f4f4;
+            font-family: sans-serif;
         }
 
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        #header {
+            background-color: #9ee788;
+            padding: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            position: relative; 
         }
 
-        label {
-            display: block;
-            margin-bottom: 5px;
+        #logo {
+            width: 80px;
+            height: auto;
+            position: absolute; 
+            top: 10px;
+            left: 00px;
         }
 
-        input[type="text"],
-        input[type="email"],
-        input[type="password"] {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
+        #slogan {
+            margin-right: 50px;
         }
 
-        button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
+        #content {
+            padding: 50px;
         }
     </style>
 </head>
 <body>
 
-    <div class="container">
-        <h2>Регистрация</h2>
-        <form action="#" method="post">
-            <label for="username">Имя пользователя:</label>
-            <input type="text" id="username" name="username" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="password">Пароль:</label>
-            <input type="password" id="password" name="password" required>
-
-            <label for="password_confirm">Подтвердите пароль:</label>
-            <input type="password" id="password_confirm" name="password_confirm" required>
-
-            <button type="submit">Зарегистрироваться</button>
-        </form>
-    </div>
+    <header id="header">
+        <img id="logo" src="burger-10956.png" alt="Логотип">
+        <span id="slogan">бургеры? наверно:/</span>
+    </header>
 
 </body>
 </html>
